--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,30 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicPlayer"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+
         <activity
-            android:name=".activities.songsListByCatIdActivity.SongsListByCatIdActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.playlistByIdListActivity.PlaylistByIdListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.albumsByIdListActivity.AlbumsByIdListActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.searchActivity.SearchActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.menuActivity.MenuActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.mainActivity.MainActivity"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
